108
- Correct bug which prevented disabling the service from Kodi
- Place named pipe in /var/run/librespot

107
- Update to ddfc28f

106
- Rework code
- Display artist and title on track load

105
- Update to 910974e

104
- Switch from ffmpegx to pulseaudio to stream to Kodi
- Wait for sound.target

103
- Update system_information_string

102
- Update to aa86ebf

101
- Enable streaming to Kodi

100
- Initial addon