@@ -1,6 +1,6 @@
-From e9bb269936ea26b1c0c698b8d05aaf68e2e79bcc Mon Sep 17 00:00:00 2001
+From 3e51e00e717f80f7c23ed112e6ab42d1a61cb7a9 Mon Sep 17 00:00:00 2001
 From: awiouy <awiouy@gmail.com>
-Date: Tue, 12 Sep 2017 09:41:14 +0200
+Date: Fri, 26 Jan 2018 21:07:48 +0100
 Subject: [PATCH] use librespot_sink pulseadio sink
 
 ---
@@ -8,21 +8,22 @@ Subject: [PATCH] use librespot_sink pulseadio sink
  1 file changed, 2 insertions(+), 1 deletion(-)
 
 diff --git a/src/audio_backend/pulseaudio.rs b/src/audio_backend/pulseaudio.rs
-index 3b9a09b..ce78062 100644
+index e9f0039..d5c2bbb 100644
 --- a/src/audio_backend/pulseaudio.rs
 +++ b/src/audio_backend/pulseaudio.rs
-@@ -23,12 +23,13 @@ impl Open for PulseAudioSink {
-         
-         let name = CString::new("librespot").unwrap();
-         let description = CString::new("A spoty client library").unwrap();
-+        let sink = CString::new("librespot_sink").unwrap();
+@@ -75,13 +75,14 @@ impl Open for PulseAudioSink {
  
-         let s = unsafe {
-             pa_simple_new(null(),               // Use the default server.
-                           name.as_ptr(),        // Our application's name.
-                           PA_STREAM_PLAYBACK,
--                          null(),               // Use the default device.
-+                          sink.as_ptr(),        // Our sink.
-                           description.as_ptr(), // Description of our stream.
-                           &ss,                  // Our sample format.
-                           null(),               // Use default channel map
+ impl Sink for PulseAudioSink {
+     fn start(&mut self) -> io::Result<()> {
++        let sink = CString::new("librespot_sink").unwrap();
+         if self.s == null_mut() {
+             self.s = call_pulseaudio(
+                 |err| unsafe {
+                     pa_simple_new(null(),               // Use the default server.
+                                   self.name.as_ptr(),   // Our application's name.
+                                   PA_STREAM_PLAYBACK,
+-                                  null(),               // Use the default device.
++                                  sink.as_ptr(),        // Our sink.
+                                   self.desc.as_ptr(),   // desc of our stream.
+                                   &self.ss,             // Our sample format.
+                                   null(),               // Use default channel map
