@@ -86,6 +86,7 @@ oe_setup_addon service.librespot
 
 LIBRESPOT="librespot --cache \"$ADDON_HOME/cache\" \
                      --disable-audio-cache \
+                     --initial-volume "$ls_v" \
                      --name \"Librespot@$HOSTNAME\" \
                      --onstart librespot.onstart \
                      --onstop librespot.onstop"
