@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <settings>
    <category   label="30100" >
-      <setting label="30101" type="labelenum" id="ls_b" lvalues="30102|30103|30104|30105" />
-      <setting label="30106" type="labelenum" id="ls_O" lvalues="ALSA|Kodi" />
-      <setting label="30107" type="text"      id="ls_u" />
-      <setting label="30108" type="text"      id="ls_p" option="hidden" visible="!eq(-1,)" />
-      <setting label="30109" type="bool"      id="ls_d" default="true"  enable="false" visible="eq(-1,)|eq(-2,)" />
-      <setting label="30109" type="bool"      id="ls_D" default="false" enable="false" visible="!eq(-2,)+!eq(-3,)" />
+      <setting label="30101" type="slider"    id="ls_v" default="50" range="0,1,100" option="int" />
+      <setting label="30102" type="labelenum" id="ls_b" lvalues="30103|30104|30105|30106" />
+      <setting label="30107" type="labelenum" id="ls_O" lvalues="30108|30109" />
+      <setting label="30110" type="text"      id="ls_u" />
+      <setting label="30111" type="text"      id="ls_p" option="hidden" visible="!eq(-1,)" />
+      <setting label="30112" type="bool"      id="ls_d" default="true"  enable="false" visible="eq(-1,)|eq(-2,)" />
+      <setting label="30112" type="bool"      id="ls_D" default="false" enable="false" visible="!eq(-2,)+!eq(-3,)" />
    </category>
-   <category   label="30110" >
-      <setting label="30106" type="labelenum" id="ls_O" lvalues="ALSA|Kodi" visible="false" />
-      <setting label="30111" type="action"    action="RunAddon(service.librespot)" enable="eq(-1,0)" />
-      <setting label="30112" type="text"      id="ls_o" default="" enable="eq(-2,0)" />
-      <setting label="30113" type="enum"      id="pcm_3" lvalues="30114|30115|30116" enable="eq(-3,0)" visible="eq(-1,default:CARD=ALSA)|eq(-1,sysdefault:CARD=ALSA)" />
+   <category   label="30113" >
+      <setting label="30107" type="labelenum" id="ls_O" lvalues="30108|30109" visible="false" />
+      <setting label="30114" type="action"    action="RunAddon(service.librespot)" enable="eq(-1,0)" />
+      <setting label="30115" type="text"      id="ls_o" default="" enable="eq(-2,0)" />
+      <setting label="30116" type="enum"      id="pcm_3" lvalues="30117|30118|30119" enable="eq(-3,0)" visible="eq(-1,default:CARD=ALSA)|eq(-1,sysdefault:CARD=ALSA)" />
    </category>
 </settings>
