@@ -1,0 +1,11 @@
+<settings>
+    <setting id="ls_D" value="false" />
+    <setting id="ls_O" value="ALSA" />
+    <setting id="ls_b" value="320" />
+    <setting id="ls_d" value="true" />
+    <setting id="ls_o" value="" />
+    <setting id="ls_p" value="" />
+    <setting id="ls_u" value="" />
+    <setting id="ls_v" value="50" />
+    <setting id="pcm_3" value="0" />
+</settings>
