@@ -1,3 +1,9 @@
+109
+- Refer librespot-org repository
+- Update to bc7ceb3
+- Set stream type to audio in Kodi mode
+- Initial volume as a setting
+
 108
 - Correct bug which prevented disabling the service from Kodi
 - Place named pipe in /var/run/librespot
